# kokkos

./: CMakeLists.txt  Makefile  README.md
src/: a.out  hello_kokkos.cpp  matmul_kokkos.cpp  matrix_matrix_kokkos.cpp  matrix_matrix_kokkos_cpu.cpp  matrix_matrix_kokkos_teams.cpp  view_kokkos.cpp
